# CUDADigitFilter

./: CMakeLists.txt  CUDADigitFilter_Coursera.ipynb  Makefile  README.md  output.txt  run.sh
include/: filters.cuh  mnist_loader.cuh  utils.cuh
src/: filters.cu  main.cu  mnist_loader.cu  utils.cu
